--- a/template/dcmaui_app_rewrite/ios/Podfile
+++ b/template/dcmaui_app_rewrite/ios/Podfile
@@ -4,8 +4,7 @@ target 'Runner' do
   use_frameworks!
 
   pod 'Yoga', :git => 'https://github.com/squirelboy360/yoga.git'
-
-
+  pod 'Kingfisher', '~> 8.3'
 end
 
 target 'RunnerTests' do
