--- a/template/dcmaui_app_rewrite/analysis_options.yaml
+++ b/template/dcmaui_app_rewrite/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     depend_on_referenced_packages: ignore
+    deprecated_member_use: ignore
     non_constant_identifier_names: ignore
 include: package:flutter_lints/flutter.yaml
 
