--- a/packages/dcflight/pubspec.yaml
+++ b/packages/dcflight/pubspec.yaml
@@ -25,6 +25,6 @@ flutter:
   plugin:
     platforms:
       ios:
-        pluginClass: DCFlight/AppDelegate
+        pluginClass: AppDelegate
       
 
