--- a/packages/debug_test/dcf_go/pubspec.yaml
+++ b/packages/debug_test/dcf_go/pubspec.yaml
@@ -1,19 +1,10 @@
 name: dcf_go
 description: "A new Flutter project."
+# The following line prevents the package from being accidentally published to
+# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+
 version: 1.0.0+1
 
 environment:
@@ -21,18 +12,28 @@ environment:
 
 
 dependencies:
+# DCFlight is a framework that provides a util to diverge from the original flutter framework to the DCFlight framework. With little to no abstsraction over the native layer and definately not the flutter layer.
+# So we still have flutter sdk if you want to use it or even mix and match with the DCFlight framework. 
+  flutter:
+    sdk: flutter
 
   dcflight:
     path: ../../dcflight
 
   dcf_primitives:
     path: ../../dcf_primitives
+
 dev_dependencies:
-  hotreloader: ^4.3.0
+  flutter_test:
+    sdk: flutter
 
 
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
 
-
-
+# The following section is specific to Flutter packages.
+flutter:
+# uses material design by default if you decide to use the `flutterViewAdapter component`
+  uses-material-design: true
 
   
