--- a/packages/debug_test/dcf_go/pubspec.yaml
+++ b/packages/debug_test/dcf_go/pubspec.yaml
@@ -28,6 +28,10 @@ dev_dependencies:
     sdk: flutter
 
 
+assets:
+  - assets/
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
