--- a/packages/debug_test/dcf_go/pubspec.yaml
+++ b/packages/debug_test/dcf_go/pubspec.yaml
@@ -1,8 +1,6 @@
 name: dcf_go
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: "A new DCFlight project."
+publish_to: 'none' 
 
 
 version: 1.0.0+1
@@ -12,8 +10,6 @@ environment:
 
 
 dependencies:
-# DCFlight is a framework that provides a util to diverge from the original flutter framework to the DCFlight framework. With little to no abstsraction over the native layer and definately not the flutter layer.
-# So we still have flutter sdk if you want to use it or even mix and match with the DCFlight framework. 
   flutter:
     sdk: flutter
 
@@ -29,12 +25,7 @@ dev_dependencies:
 
 
 
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
+# Assets go here
 flutter:
   assets:
     - assets/
